--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="headerLinks">
+            <a>header link one</a>
+            <a>header link two</a>
+            <a>header link three</a>
+        </div>
+    </div>
+
+    <div class="content">
+
+    </div>
+
+    <div class="footer">
+
+    </div>
 </body>
 </html>
